# Django_app

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
mysite/: demo.py  devices.csv  log.txt  log.txt.2  orders.csv  requirements.txt  shopapp-products-fixtures.json  shopapp-products-fixtures.xml
mysite/accounts/: forms.py  models.py  urls.py  views.py
mysite/accounts/migrations/: 0001_initial.py  0002_profile_avatar.py
mysite/blogapp/: admin.py  models.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py
mysite/myapiapp/: urls.py  views.py
mysite/myauth/: models.py  tests.py  urls.py  views.py
mysite/myauth/migrations/: 0001_initial.py  0002_alter_profile_myauth_user.py
mysite/myblogapp/: models.py  sitemap.py  urls.py  views.py
mysite/myblogapp/migrations/: 0001_initial.py
mysite/mysite/: queries.sql  settings.py  sitemaps.py  urls.py
mysite/requestdataapp/: forms.py  middlewares.py  models.py  urls.py  views.py
mysite/requestdataapp/for_validate/: for_validate.py
mysite/requestdataapp/migrations/: 0001_initial.py  0002_userip.py  0003_files.py
mysite/shopapp/: admin.py  apps.py  common.py  forms.py  models.py  serializer.py  sitemap.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: orders-fixture.json  products-fixture.json  shopapp-fixture.json  users-fixture.json
mysite/shopapp/for_validate/: for_validate.py
mysite/shopapp/migrations/: 0007_alter_order_options_alter_product_options.py  0008_alter_order_delivery_address_alter_order_promocode_and_more.py  0009_alter_product_options.py  (+7 more)
(+46 files in other folders)
