[project]
name = "django-app"
version = "0.1.0"
description = ""
authors = [
    {name = "marytep",email = "marytep@mail.ru"}
]
requires-python = ">=3.12"
dependencies = [
    "django (==4.1.6)",
    "django-rest-framework (>=0.1.0,<0.2.0)",
    "djangorestframework (==3.14.0)",
    "django-debug-toolbar (==4.0.0)",
    "django-filter (==22.1)",
    "pillow (>=11.1.0,<12.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
